[BACKLOG-24617] Adding support for serialization of InjectionDeep lists and arrays.
This involves a change to BeanInjector.getPropVal, which now walks
down the full list of BeanLevelInfos, specially handling LIST and
ARRAY.

Also fixes a handful of compiler warnings, mostly involving missing
@Override.

Files changed for injectiondeep support are just these 3:
BeanInjector
MetaXmlSerializerTest
StepMetaPropsTest

https://jira.pentaho.com/browse/BACKLOG-24617